--- a/esof322.a4/.classpath
+++ b/esof322.a4/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Amy/Downloads/BreezySwing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Amy/Downloads/AdventureGame.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/amyleister/Downloads/AdventureGame.jar"/>
+	<classpathentry kind="lib" path="/Users/amyleister/Downloads/BreezySwing.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
